선택된 이미지 뿌리기 및  뷰 동적 변화

--- a/Jungnami/Jungnami/Info.plist
+++ b/Jungnami/Jungnami/Info.plist
@@ -2,8 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string> 사용자의 앨범에 접근합니다</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>photos description</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
