마이페이지 헤더 뷰 및 내 피드 테이블 뷰 스크롤 가능하도록 설정

--- a/Jungnami/Podfile
+++ b/Jungnami/Podfile
@@ -10,7 +10,8 @@ pod 'SnapKit'
 pod 'Alamofire'
 pod 'SwiftyJSON'
 pod 'Kingfisher'
-
+pod 'LTScrollView'
+pod 'MJRefresh'
 
 
   # Pods for Jungnami
