팟 업데이트 ltscrollView 슬라이드 설정

--- a/Jungnami/Podfile
+++ b/Jungnami/Podfile
@@ -9,7 +9,7 @@ target 'Jungnami' do
 pod 'SnapKit'
 pod 'Alamofire'
 pod 'SwiftyJSON'
-pod 'Kingfisher'
+pod 'Kingfisher', '~>4.7.0'
 pod 'LTScrollView'
 
 
