푸쉬 노티피케이션 기능 추가

--- a/Jungnami/Podfile
+++ b/Jungnami/Podfile
@@ -12,7 +12,8 @@ pod 'SwiftyJSON'
 pod 'Kingfisher', '~>4.7.0'
 pod 'LTScrollView'
 pod 'lottie-ios'
-
+pod 'Firebase/Core'
+pod 'Firebase/Messaging'
 
   # Pods for Jungnami
 
