--- a/Jungnami/Jungnami/Info.plist
+++ b/Jungnami/Jungnami/Info.plist
@@ -28,7 +28,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>3</string>
 	<key>KAKAO_APP_KEY</key>
 	<string>19f6d81f6204f7982a1d6545d4ee96d5</string>
 	<key>LSApplicationQueriesSchemes</key>
@@ -59,7 +59,7 @@
 		</dict>
 	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>photos description</string>
+	<string>사용자의 앨범 접근을 허용합니다</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
