--- a/Jungnami/Podfile
+++ b/Jungnami/Podfile
@@ -5,7 +5,7 @@ target 'Jungnami' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-
+pod 'Moya'
 pod 'SnapKit'
 pod 'Alamofire'
 pod 'SwiftyJSON'
